--- a/Distillation.tex
+++ b/Distillation.tex
@@ -6,6 +6,7 @@ All these distillation methods have in common that there is an efficiency-qualit
 
 This thesis focuses on reducing the model size of the models of Pixart-$\Sigma$ and Flux-dev using the concept of knowledge distillation which is presented in the following section in detail.
 \subsection{Knowledge Distillation}
+\label{sec:BackgroundKnowledgeDistillation}
 The concept of knowledge distillation \cite{KnowledgeDistillation} was originally introduced for training a small model, referred to as the student, on classification tasks such as MNIST \cite{MNIST}. In this framework, a larger model with strong generalization capabilities, referred to as the teacher, serves as guidance. It was shown, that computing the loss between the probability outputs of the teacher and the student enables much more efficient training than relying solely on the original class labels. In such a setting, the small model can be trained on less data or with a higher learning rate. As a possible explanation, the authors hypothesized that even the very small probabilities the teacher assigns to incorrect classes, and particularly their relative magnitudes, carry valuable information for the student. For example, if a "2" from the MNIST dataset is to be classified, it is valuable information to know whether it resembles a "3" or a "5". When only hard targets, e.g., one-hot labels,  are used, this relational information is lost. To make this information accessible to the student, one must deviate from the standard temperature $T=1$ of the softmax function to soften the probabilities. Specifically, both teacher and student use temperature-scaling softmax($\frac{z_i}{T}$) where $T > 1$ making the probability distribution flatter and revealing more information about class similarities. In general, it has been shown that a combination of the distillation loss $\mathcal{L_\text{KD}}$, calculated using the outputs from the teacher, and the task loss $\mathcal{L_\text{Task}}$, calculated with the hard labels, is advantageous
 \begin{equation}
 	\mathcal{L} = \mathcal{L}_\text{Task} + \lambda_\text{KD}\mathcal{L}_\text{KD} \quad.
